#Language-HOOK-commit31 add key add-childs-part = Th\u00EAm con

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -529,3 +529,4 @@ service-detail=Chi ti\u1EBFt th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
 
 
 Required=D\u1EEF li\u1EC7u b\u1EAFt bu\u1ED9c
+add-childs-part=Th\u00EAm con
