#Language-HOOK-commit71 add key add-dossier-template = Th\u00EAm h\u1ED3 s\u01A1

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -531,3 +531,4 @@ service-detail=Chi ti\u1EBFt th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
 Required=D\u1EEF li\u1EC7u b\u1EAFt bu\u1ED9c
 add-childs-part=Th\u00EAm con
 add-dossier-part=Th\u00EAm th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
+add-dossier-template=Th\u00EAm h\u1ED3 s\u01A1
