#Language-HOOK-commit91 add key add-service-config = Th\u00EAm d\u1ECBch v\u1EE5 c\u00F4ng

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -532,3 +532,4 @@ Required=D\u1EEF li\u1EC7u b\u1EAFt bu\u1ED9c
 add-childs-part=Th\u00EAm con
 add-dossier-part=Th\u00EAm th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
 add-dossier-template=Th\u00EAm h\u1ED3 s\u01A1
+add-service-config=Th\u00EAm d\u1ECBch v\u1EE5 c\u00F4ng
