--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -533,3 +533,4 @@ add-childs-part=Th\u00EAm con
 add-dossier-part=Th\u00EAm th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
 add-dossier-template=Th\u00EAm h\u1ED3 s\u01A1
 add-service-config=Th\u00EAm d\u1ECBch v\u1EE5 c\u00F4ng
+back-office=Th\u00E0nh ph\u1EA7n c\u00E1n b\u1ED9 x\u1EED l\u00FD
