#Language-HOOK-commit131 add key domainCode = L\u1ECDc theo l\u0129nh v\u1EF1c th\u1EE7 t\u1EE5c

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -534,3 +534,4 @@ add-dossier-part=Th\u00EAm th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
 add-dossier-template=Th\u00EAm h\u1ED3 s\u01A1
 add-service-config=Th\u00EAm d\u1ECBch v\u1EE5 c\u00F4ng
 back-office=Th\u00E0nh ph\u1EA7n c\u00E1n b\u1ED9 x\u1EED l\u00FD
+domainCode=L\u1ECDc theo l\u0129nh v\u1EF1c th\u1EE7 t\u1EE5c
