--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -538,3 +538,4 @@ domainCode=L\u1ECDc theo l\u0129nh v\u1EF1c th\u1EE7 t\u1EE5c
 dossier-info=Th\u00F4ng tin h\u1ED3 s\u01A1
 dossier-template-id=M\u1EABu h\u1ED3 s\u01A1
 dossier.part.childs.has.existed=Th\u00E0nh ph\u1EA7n n\u00E0y ch\u1EE9a th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 con
+dossier.part.has.existed=Th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 theo m\u1EABu h\u1ED3 s\u01A1 \u0111ang t\u1ED3n t\u1EA1i
