#Language-HOOK-commit191 add key dossier.part.childs.has.existed   = Th\u00E0nh ph\u1EA7n n\u00E0y ch\u1EE9a th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 con

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -537,3 +537,4 @@ back-office=Th\u00E0nh ph\u1EA7n c\u00E1n b\u1ED9 x\u1EED l\u00FD
 domainCode=L\u1ECDc theo l\u0129nh v\u1EF1c th\u1EE7 t\u1EE5c
 dossier-info=Th\u00F4ng tin h\u1ED3 s\u01A1
 dossier-template-id=M\u1EABu h\u1ED3 s\u01A1
+dossier.part.childs.has.existed=Th\u00E0nh ph\u1EA7n n\u00E0y ch\u1EE9a th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 con
