--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -541,3 +541,4 @@ dossier.part.childs.has.existed=Th\u00E0nh ph\u1EA7n n\u00E0y ch\u1EE9a th\u00E0
 dossier.part.has.existed=Th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 theo m\u1EABu h\u1ED3 s\u01A1 \u0111ang t\u1ED3n t\u1EA1i
 dossier.system.exception.occurred=l\u1ED7i h\u1EC7 th\u1ED1ng
 dossierpartlist=Danh s\u00E1ch th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
+dossierservicelist=Danh s\u00E1ch th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
