--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -542,3 +542,4 @@ dossier.part.has.existed=Th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 theo m\u1EABu h\u1
 dossier.system.exception.occurred=l\u1ED7i h\u1EC7 th\u1ED1ng
 dossierpartlist=Danh s\u00E1ch th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
 dossierservicelist=Danh s\u00E1ch th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
+edit_dossier_template=C\u1EADp nh\u1EADt h\u1ED3 s\u01A1
