#Language-HOOK-commit311 add key form-report = M\u00E3 thi\u1EBFt k\u1EBF xml jasper

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -544,3 +544,4 @@ dossierpartlist=Danh s\u00E1ch th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
 dossierservicelist=Danh s\u00E1ch th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
 edit_dossier_template=C\u1EADp nh\u1EADt h\u1ED3 s\u01A1
 fill-by-service-admin=-L\u1ECDc theo c\u1EA5p h\u00E0nh ch\u00EDnh-
+form-report=M\u00E3 thi\u1EBFt k\u1EBF xml jasper
