--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -548,3 +548,4 @@ form-report=M\u00E3 thi\u1EBFt k\u1EBF xml jasper
 form-script=M\u00E3 t\u1EA1o form
 front-back-office=Th\u00E0nh ph\u1EA7n ph\u00EDa c\u00F4ng d\u00E2n v\u00E0 c\u00E1n b\u1ED9 x\u1EED l\u00FD
 front-office=Th\u00E0nh ph\u1EA7n ph\u00EDa c\u00F4ng d\u00E2n
+frontoffice=Front office
