--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -550,3 +550,4 @@ front-back-office=Th\u00E0nh ph\u1EA7n ph\u00EDa c\u00F4ng d\u00E2n v\u00E0 c\u0
 front-office=Th\u00E0nh ph\u1EA7n ph\u00EDa c\u00F4ng d\u00E2n
 frontoffice=Front office
 gov-agency-name=T\u00EAn c\u01A1 quan
+govAgency-Name=C\u01A1 quan
