--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -553,3 +553,4 @@ gov-agency-name=T\u00EAn c\u01A1 quan
 govAgency-Name=C\u01A1 quan
 govAgencyCode=M\u00E3 c\u01A1 quan
 groups-optional=nh\u00F3m t\u00F9y ch\u1ECDn
+inactive=Kh\u00F4ng ho\u1EA1t \u0111\u1ED9ng
