--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -552,3 +552,4 @@ frontoffice=Front office
 gov-agency-name=T\u00EAn c\u01A1 quan
 govAgency-Name=C\u01A1 quan
 govAgencyCode=M\u00E3 c\u01A1 quan
+groups-optional=nh\u00F3m t\u00F9y ch\u1ECDn
