#Language-HOOK-commit631 add key multy-papers-results = Nhi\u1EC1u gi\u1EA5y t\u1EDD k\u1EBFt qu\u1EA3

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -561,3 +561,4 @@ level-1=M\u1EE9c \u0111\u1ED9 1
 level-2=Level 2
 level-3=M\u1EE9c \u0111\u1ED9 3
 level-4=M\u1EE9c \u0111\u1ED9 4
+multy-papers-results=Nhi\u1EC1u gi\u1EA5y t\u1EDD k\u1EBFt qu\u1EA3
