#Language-HOOK-commit611 add key level-4 = M\u1EE9c \u0111\u1ED9 4

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -560,3 +560,4 @@ inactive=Kh\u00F4ng ho\u1EA1t \u0111\u1ED9ng
 level-1=M\u1EE9c \u0111\u1ED9 1
 level-2=Level 2
 level-3=M\u1EE9c \u0111\u1ED9 3
+level-4=M\u1EE9c \u0111\u1ED9 4
