#Language-HOOK-commit781 add key org.opencps.dossiermgt.InvalidServiceDomainException                        = Ch\u01B0a ch\u1ECDn l\u0129nh v\u1EF1c th\u1EE7 th\u1EE5c

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -572,3 +572,4 @@ org.opencps.dossiermgt.DuplicateServiceConfigGovCodeAndServiceInFoException=C\u0
 org.opencps.dossiermgt.InvalidInWorkingUnitException=C\u01A1 quan kh\u00F4ng c\u00F3 trong t\u1ED5 ch\u1EE9c n\u00E0o
 org.opencps.dossiermgt.InvalidServiceConfigGovCodeException=Ch\u01B0a nh\u1EADp m\u00E3 c\u01A1 quan
 org.opencps.dossiermgt.InvalidServiceConfigGovNameException=Ch\u01B0a nh\u1EADp t\u00EAn c\u01A1 quan
+org.opencps.dossiermgt.InvalidServiceDomainException=Ch\u01B0a ch\u1ECDn l\u0129nh v\u1EF1c th\u1EE7 th\u1EE5c
