--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -569,3 +569,4 @@ org.opencps.dossiermgt.DuplicateDossierPartNumberException=S\u1ED1 th\u00E0nh ph
 org.opencps.dossiermgt.DuplicateDossierPartSiblingException=S\u1ED1 th\u1EE9 t\u1EF1 s\u1EAFp x\u1EBFp b\u1ECB tr\u00F9ng
 org.opencps.dossiermgt.DuplicateDossierTemplateNumberException=S\u1ED1 h\u1ED3 s\u01A1 b\u1ECB tr\u00F9ng
 org.opencps.dossiermgt.DuplicateServiceConfigGovCodeAndServiceInFoException=C\u01A1 quan \u0111\u00E3 c\u00F3 th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh n\u00E0y
+org.opencps.dossiermgt.InvalidInWorkingUnitException=C\u01A1 quan kh\u00F4ng c\u00F3 trong t\u1ED5 ch\u1EE9c n\u00E0o
