#Language-HOOK-commit801 add key org.opencps.dossiermgt.OutOfLengthDossierPartNumberException                = S\u1ED1 th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 qu\u00E1 d\u00E0i

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -574,3 +574,4 @@ org.opencps.dossiermgt.InvalidServiceConfigGovCodeException=Ch\u01B0a nh\u1EADp 
 org.opencps.dossiermgt.InvalidServiceConfigGovNameException=Ch\u01B0a nh\u1EADp t\u00EAn c\u01A1 quan
 org.opencps.dossiermgt.InvalidServiceDomainException=Ch\u01B0a ch\u1ECDn l\u0129nh v\u1EF1c th\u1EE7 th\u1EE5c
 org.opencps.dossiermgt.OutOfLengthDossierPartNameException=T\u00EAn th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 qu\u00E1 d\u00E0i
+org.opencps.dossiermgt.OutOfLengthDossierPartNumberException=S\u1ED1 th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 qu\u00E1 d\u00E0i
