--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -578,3 +578,4 @@ org.opencps.dossiermgt.OutOfLengthDossierPartNumberException=S\u1ED1 th\u00E0nh 
 org.opencps.dossiermgt.OutOfLengthDossierTemplateFileNumberException=M\u00E3 k\u00ED hi\u1EC7u m\u1EABu \u0111\u01A1n qu\u00E1 d\u00E0i
 org.opencps.dossiermgt.OutOfLengthDossierTemplateNameException=T\u00EAn h\u1ED3 s\u01A1 qu\u00E1 d\u00E0i
 org.opencps.dossiermgt.OutOfLengthDossierTemplateNumberException=S\u1ED1 h\u1ED3 s\u01A1 qu\u00E1 d\u00E0i
+org.opencps.dossiermgt.OutOfLengthServiceConfigGovCodeException=M\u00E3 c\u01A1 quan qu\u00E1 d\u00E0i
