--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -581,3 +581,4 @@ org.opencps.dossiermgt.OutOfLengthDossierTemplateNumberException=S\u1ED1 h\u1ED3
 org.opencps.dossiermgt.OutOfLengthServiceConfigGovCodeException=M\u00E3 c\u01A1 quan qu\u00E1 d\u00E0i
 org.opencps.dossiermgt.OutOfLengthServiceConfigGovNameException=T\u00EAn c\u01A1 quan qu\u00E1 d\u00E0i
 other-papers-group=Nh\u00F3m gi\u1EA5y t\u1EDD kh\u00E1c
+own-records=H\u1ED3 s\u01A1 ri\u00EAng
