#Language-HOOK-commit931 add key papers-results = Gi\u1EA5y t\u1EDD k\u1EBFt qu\u1EA3

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -583,3 +583,4 @@ org.opencps.dossiermgt.OutOfLengthServiceConfigGovNameException=T\u00EAn c\u01A1
 other-papers-group=Nh\u00F3m gi\u1EA5y t\u1EDD kh\u00E1c
 own-records=H\u1ED3 s\u01A1 ri\u00EAng
 paper-submited=Gi\u1EA5y n\u1ED9p v\u00E0o
+papers-results=Gi\u1EA5y t\u1EDD k\u1EBFt qu\u1EA3
