#Language-HOOK-commit911 add key paper-submited = Gi\u1EA5y n\u1ED9p v\u00E0o

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -582,3 +582,4 @@ org.opencps.dossiermgt.OutOfLengthServiceConfigGovCodeException=M\u00E3 c\u01A1 
 org.opencps.dossiermgt.OutOfLengthServiceConfigGovNameException=T\u00EAn c\u01A1 quan qu\u00E1 d\u00E0i
 other-papers-group=Nh\u00F3m gi\u1EA5y t\u1EDD kh\u00E1c
 own-records=H\u1ED3 s\u01A1 ri\u00EAng
+paper-submited=Gi\u1EA5y n\u1ED9p v\u00E0o
