--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -585,3 +585,4 @@ own-records=H\u1ED3 s\u01A1 ri\u00EAng
 paper-submited=Gi\u1EA5y n\u1ED9p v\u00E0o
 papers-results=Gi\u1EA5y t\u1EDD k\u1EBFt qu\u1EA3
 parent-id=Th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 cha
+part-name=T\u00EAn th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
