--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -584,3 +584,4 @@ other-papers-group=Nh\u00F3m gi\u1EA5y t\u1EDD kh\u00E1c
 own-records=H\u1ED3 s\u01A1 ri\u00EAng
 paper-submited=Gi\u1EA5y n\u1ED9p v\u00E0o
 papers-results=Gi\u1EA5y t\u1EDD k\u1EBFt qu\u1EA3
+parent-id=Th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 cha
