--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -587,3 +587,4 @@ papers-results=Gi\u1EA5y t\u1EDD k\u1EBFt qu\u1EA3
 parent-id=Th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 cha
 part-name=T\u00EAn th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
 part-no=S\u1ED1 th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
+part-tip=M\u00F4 t\u1EA3 h\u01B0\u1EDBng d\u1EABn th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
