--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -589,3 +589,4 @@ part-name=T\u00EAn th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
 part-no=S\u1ED1 th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
 part-tip=M\u00F4 t\u1EA3 h\u01B0\u1EDBng d\u1EABn th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
 part-type=Ki\u1EC3u th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
+process=Quy tr\u00ECnh x\u1EED l\u00FD
