#Language-HOOK-commit1111 add key service-backoffice = X\u1EED l\u00ED h\u1ED3 s\u01A1

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -592,3 +592,4 @@ part-type=Ki\u1EC3u th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
 process=Quy tr\u00ECnh x\u1EED l\u00FD
 row-no=STT
 sample-data=D\u1EEF li\u1EC7u m\u1EABu
+service-backoffice=X\u1EED l\u00ED h\u1ED3 s\u01A1
