#Language-HOOK-commit1151 add key service-citizen = C\u00F4ng d\u00E2n n\u1ED9p h\u1ED3 s\u01A1

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -594,3 +594,4 @@ row-no=STT
 sample-data=D\u1EEF li\u1EC7u m\u1EABu
 service-backoffice=X\u1EED l\u00ED h\u1ED3 s\u01A1
 service-businees=Doanh nghi\u1EC7p n\u1ED9p h\u1ED3 s\u01A1
+service-citizen=C\u00F4ng d\u00E2n n\u1ED9p h\u1ED3 s\u01A1
