#Language-HOOK-commit1251 add key service-mode = Ch\u1EBF \u0111\u1ED9

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -599,3 +599,4 @@ service-citizen=C\u00F4ng d\u00E2n n\u1ED9p h\u1ED3 s\u01A1
 service-info-id=Th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
 service-instruction=H\u01B0\u1EDBng d\u1EABn th\u1EF1c hi\u1EC7n
 service-level=C\u1EA5p \u0111\u1ED9 d\u1ECBch v\u1EE5
+service-mode=Ch\u1EBF \u0111\u1ED9
