#Language-HOOK-commit1351 add key template-description = M\u00F4 t\u1EA3

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -604,3 +604,4 @@ service-mode=Ch\u1EBF \u0111\u1ED9
 service-onegate=Ti\u1EBFp nh\u1EADn m\u1ED9t c\u1EEDa
 service-portal=C\u1ED5ng ti\u1EBFp nh\u1EADn
 sibling=S\u1ED1 th\u1EE9 t\u1EF1 s\u1EAFp x\u1EBFp th\u00E0nh ph\u1EA7n
+template-description=M\u00F4 t\u1EA3
