--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -611,3 +611,4 @@ template-file-no=M\u00E3 k\u00ED hi\u1EC7u m\u1EABu \u0111\u01A1n
 template-number=M\u00E3 ti\u1EBFp nh\u1EADn
 template_name=T\u00EAn h\u1ED3 s\u01A1
 top_tabs_dossier_template=M\u1EABu h\u1ED3 s\u01A1
+top_tabs_service_config=C\u1EA5u h\u00ECnh d\u1ECBch v\u1EE5 c\u00F4ng
