#Language-HOOK-commit1511 add key update-dossier = C\u1EADp nh\u1EADt h\u1ED3 s\u01A1-th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1-th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -612,3 +612,4 @@ template-number=M\u00E3 ti\u1EBFp nh\u1EADn
 template_name=T\u00EAn h\u1ED3 s\u01A1
 top_tabs_dossier_template=M\u1EABu h\u1ED3 s\u01A1
 top_tabs_service_config=C\u1EA5u h\u00ECnh d\u1ECBch v\u1EE5 c\u00F4ng
+update-dossier=C\u1EADp nh\u1EADt h\u1ED3 s\u01A1-th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1-th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
