--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -614,3 +614,4 @@ top_tabs_dossier_template=M\u1EABu h\u1ED3 s\u01A1
 top_tabs_service_config=C\u1EA5u h\u00ECnh d\u1ECBch v\u1EE5 c\u00F4ng
 update-dossier=C\u1EADp nh\u1EADt h\u1ED3 s\u01A1-th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1-th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
 update-dossier-part=C\u1EADp nh\u1EADt th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
+update-service-config=C\u1EADp nh\u1EADt c\u1EA5u h\u00ECnh d\u1ECBch v\u1EE5 c\u00F4ng
