--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -621,3 +621,4 @@ update-service-config=C\u1EADp nh\u1EADt c\u1EA5u h\u00ECnh d\u1ECBch v\u1EE5 c\
 
 
 actor=\u0110\u1ED1i t\u01B0\u1EE3ng
+edit-dossier-btn=Ghi l\u1EA1i
