--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -623,3 +623,4 @@ update-service-config=C\u1EADp nh\u1EADt c\u1EA5u h\u00ECnh d\u1ECBch v\u1EE5 c\
 actor=\u0110\u1ED1i t\u01B0\u1EE3ng
 edit-dossier-btn=Ghi l\u1EA1i
 canceled-dossier-btn=H\u1EE7y
+add-dossier=Th\u00EAm m\u1EDBi h\u1ED3 s\u01A1
