--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -624,3 +624,4 @@ actor=\u0110\u1ED1i t\u01B0\u1EE3ng
 edit-dossier-btn=Ghi l\u1EA1i
 canceled-dossier-btn=H\u1EE7y
 add-dossier=Th\u00EAm m\u1EDBi h\u1ED3 s\u01A1
+add-individual-part-group=Th\u00EAm h\u1ED3 s\u01A1 ri\u00EAng
