--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -625,3 +625,4 @@ edit-dossier-btn=Ghi l\u1EA1i
 canceled-dossier-btn=H\u1EE7y
 add-dossier=Th\u00EAm m\u1EDBi h\u1ED3 s\u01A1
 add-individual-part-group=Th\u00EAm h\u1ED3 s\u01A1 ri\u00EAng
+add-private-dossier=Th\u00EAm h\u1ED3 s\u01A1 ri\u00EAng
