#Language-HOOK-commit111 add key agree = \u0110\u1ED3ng \u00FD

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -626,3 +626,4 @@ canceled-dossier-btn=H\u1EE7y
 add-dossier=Th\u00EAm m\u1EDBi h\u1ED3 s\u01A1
 add-individual-part-group=Th\u00EAm h\u1ED3 s\u01A1 ri\u00EAng
 add-private-dossier=Th\u00EAm h\u1ED3 s\u01A1 ri\u00EAng
+agree=\u0110\u1ED3ng \u00FD
