--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -627,3 +627,4 @@ add-dossier=Th\u00EAm m\u1EDBi h\u1ED3 s\u01A1
 add-individual-part-group=Th\u00EAm h\u1ED3 s\u01A1 ri\u00EAng
 add-private-dossier=Th\u00EAm h\u1ED3 s\u01A1 ri\u00EAng
 agree=\u0110\u1ED3ng \u00FD
+are-you-sure-remove-dossier-file=B\u1EA1n c\u00F3 ch\u1EAFc mu\u1ED1n x\u00F3a t\u1EC7p \u0111\u00EDnh k\u00E8m?
