--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -629,3 +629,4 @@ add-private-dossier=Th\u00EAm h\u1ED3 s\u01A1 ri\u00EAng
 agree=\u0110\u1ED3ng \u00FD
 are-you-sure-remove-dossier-file=B\u1EA1n c\u00F3 ch\u1EAFc mu\u1ED1n x\u00F3a t\u1EC7p \u0111\u00EDnh k\u00E8m?
 are-you-sure-remove-group=B\u1EA1n c\u00F3 ch\u1EAFc ch\u1EAFn mu\u1ED1n x\u00F3a nh\u00F3m h\u1ED3 s\u01A1 n\u00E0y?
+add-dossier-online=CHU\u1EA8N B\u1ECA H\u1ED2 S\u01A0 TR\u1EF0C TUY\u1EBEN
