#Language-HOOK-commit311 add key create-file = T\u1EA1o form

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -636,3 +636,4 @@ are-you-sure-remove-individual-group=B\u1EA1n c\u00F3 ch\u1EAFc mu\u1ED1n x\u00F
 contact-email=Email li\u00EAn h\u1EC7
 contact-name=Ng\u01B0\u1EDDi li\u00EAn l\u1EA1c
 contact-tel-no=S\u1ED1 \u0111i\u1EC7n tho\u1EA1i li\u00EAn h\u1EC7
+create-file=T\u1EA1o form
