--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -637,3 +637,4 @@ contact-email=Email li\u00EAn h\u1EC7
 contact-name=Ng\u01B0\u1EDDi li\u00EAn l\u1EA1c
 contact-tel-no=S\u1ED1 \u0111i\u1EC7n tho\u1EA1i li\u00EAn h\u1EC7
 create-file=T\u1EA1o form
+datetime=Ng\u00E0y gi\u1EDD
