#Language-HOOK-commit371 add key display-name = T\u00EAn gi\u1EA5y t\u1EDD

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -639,3 +639,4 @@ contact-tel-no=S\u1ED1 \u0111i\u1EC7n tho\u1EA1i li\u00EAn h\u1EC7
 create-file=T\u1EA1o form
 datetime=Ng\u00E0y gi\u1EDD
 declaration-online=Khai tr\u1EF1c tuy\u1EBFn
+display-name=T\u00EAn gi\u1EA5y t\u1EDD
