--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -642,3 +642,4 @@ declaration-online=Khai tr\u1EF1c tuy\u1EBFn
 display-name=T\u00EAn gi\u1EA5y t\u1EDD
 ## duplicate key - line -642 district-code=Qu\u1EADn/Huy\u1EC7n
 ## duplicate key - line -643 district-id=Qu\u1EADn/huy\u1EC7n
+## duplicate key - line -644 domain-code=L\u0129nh v\u1EF1c
