#Language-HOOK-commit511 add key dossier-file = Gi\u1EA5y t\u1EDD

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -646,3 +646,4 @@ display-name=T\u00EAn gi\u1EA5y t\u1EDD
 dossier=H\u1ED3 s\u01A1
 dossier-create-date=Ng\u00E0y t\u1EA1o h\u1ED3 s\u01A1
 dossier-estimate-date=Ng\u00E0y h\u1EB9n tr\u1EA3
+dossier-file=Gi\u1EA5y t\u1EDD
