--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -649,3 +649,4 @@ dossier-estimate-date=Ng\u00E0y h\u1EB9n tr\u1EA3
 dossier-file=Gi\u1EA5y t\u1EDD
 dossier-file-date=Ng\u00E0y v\u0103n b\u1EA3n
 dossier-file-name=T\u00EAn v\u0103n b\u1EA3n
+dossier-file-no=S\u1ED1 hi\u1EC7u gi\u1EA5y t\u1EDD
