--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -652,3 +652,4 @@ dossier-file-name=T\u00EAn v\u0103n b\u1EA3n
 dossier-file-no=S\u1ED1 hi\u1EC7u gi\u1EA5y t\u1EDD
 dossier-file-result=Gi\u1EA5y t\u1EDD k\u1EBFt qu\u1EA3
 dossier-file-type=Lo\u1EA1i gi\u1EA5y t\u1EDD
+dossier-file-upload=Ch\u1ECDn t\u1EC7p
