#Language-HOOK-commit691 add key dossier-receive-date = Ng\u00E0y ti\u1EBFp nh\u1EADn

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -655,3 +655,4 @@ dossier-file-type=Lo\u1EA1i gi\u1EA5y t\u1EDD
 dossier-file-upload=Ch\u1ECDn t\u1EC7p
 dossier-finish-date=Ng\u00E0y ho\u00E0n th\u00E0nh
 dossier-name=H\u1ED3 s\u01A1
+dossier-receive-date=Ng\u00E0y ti\u1EBFp nh\u1EADn
