#Language-HOOK-commit711 add key dossier-reception-no = M\u00E3 ti\u1EBFp nh\u1EADn

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -656,3 +656,4 @@ dossier-file-upload=Ch\u1ECDn t\u1EC7p
 dossier-finish-date=Ng\u00E0y ho\u00E0n th\u00E0nh
 dossier-name=H\u1ED3 s\u01A1
 dossier-receive-date=Ng\u00E0y ti\u1EBFp nh\u1EADn
+dossier-reception-no=M\u00E3 ti\u1EBFp nh\u1EADn
