--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -658,3 +658,4 @@ dossier-name=H\u1ED3 s\u01A1
 dossier-receive-date=Ng\u00E0y ti\u1EBFp nh\u1EADn
 dossier-reception-no=M\u00E3 ti\u1EBFp nh\u1EADn
 dossier-service-name=T\u00EAn th\u1EE7 t\u1EE5c
+dossier-status=Tr\u1EA1ng th\u00E1i h\u1ED3 s\u01A1
