--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -657,3 +657,4 @@ dossier-finish-date=Ng\u00E0y ho\u00E0n th\u00E0nh
 dossier-name=H\u1ED3 s\u01A1
 dossier-receive-date=Ng\u00E0y ti\u1EBFp nh\u1EADn
 dossier-reception-no=M\u00E3 ti\u1EBFp nh\u1EADn
+dossier-service-name=T\u00EAn th\u1EE7 t\u1EE5c
