--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -661,3 +661,4 @@ dossier-service-name=T\u00EAn th\u1EE7 t\u1EE5c
 dossier-status=Tr\u1EA1ng th\u00E1i h\u1ED3 s\u01A1
 dossier-submit-date=Ng\u00E0y g\u1EEDi
 dossier-update-date=Ng\u00E0y c\u1EADp nh\u1EADt
+dossier_info=Th\u00F4ng tin h\u1ED3 s\u01A1
