#Language-HOOK-commit851 add key dossiermgt.file.duplicate.name = T\u00EAn t\u1EC7p \u0111\u00EDnh k\u00E8m \u0111\u00E3 t\u1ED3n t\u1EA1i

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -663,3 +663,4 @@ dossier-submit-date=Ng\u00E0y g\u1EEDi
 dossier-update-date=Ng\u00E0y c\u1EADp nh\u1EADt
 dossier_info=Th\u00F4ng tin h\u1ED3 s\u01A1
 dossier_part=Th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
+dossiermgt.file.duplicate.name=T\u00EAn t\u1EC7p \u0111\u00EDnh k\u00E8m \u0111\u00E3 t\u1ED3n t\u1EA1i
