--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -664,3 +664,4 @@ dossier-update-date=Ng\u00E0y c\u1EADp nh\u1EADt
 dossier_info=Th\u00F4ng tin h\u1ED3 s\u01A1
 dossier_part=Th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1
 dossiermgt.file.duplicate.name=T\u00EAn t\u1EC7p \u0111\u00EDnh k\u00E8m \u0111\u00E3 t\u1ED3n t\u1EA1i
+error-while-remove-this-group=X\u1EA3y ra l\u1ED7i trong qu\u00E1 tr\u00ECnh x\u00F3a h\u1ED3 s\u01A1 ri\u00EAng
