--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -667,3 +667,4 @@ dossiermgt.file.duplicate.name=T\u00EAn t\u1EC7p \u0111\u00EDnh k\u00E8m \u0111\
 error-while-remove-this-group=X\u1EA3y ra l\u1ED7i trong qu\u00E1 tr\u00ECnh x\u00F3a h\u1ED3 s\u01A1 ri\u00EAng
 external-dossier=H\u1ED3 s\u01A1 ngo\u00E0i
 file-result=Gi\u1EA5y t\u1EDD k\u1EBFt qu\u1EA3
+filter-by-gov-agency=--L\u1ECDc theo c\u01A1 quan th\u1EF1c hi\u1EC7n--
