#Language-HOOK-commit971 add key finish-date = Ng\u00E0y ho\u00E0n th\u00E0nh

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -669,3 +669,4 @@ external-dossier=H\u1ED3 s\u01A1 ngo\u00E0i
 file-result=Gi\u1EA5y t\u1EDD k\u1EBFt qu\u1EA3
 filter-by-gov-agency=--L\u1ECDc theo c\u01A1 quan th\u1EF1c hi\u1EC7n--
 filter-by-service-domain=--L\u1ECDc theo l\u0129nh v\u1EF1c th\u1EE7 t\u1EE5c--
+finish-date=Ng\u00E0y ho\u00E0n th\u00E0nh
