#Language-HOOK-commit1171 add key no-dossier-result-info = Kh\u00F4ng c\u00F3 th\u00F4ng tin k\u1EBFt qu\u1EA3 x\u1EED l\u00FD h\u1ED3 s\u01A1

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -680,3 +680,4 @@ history=Qu\u00E1 tr\u00ECnh x\u1EED l\u00FD
 list-service-config=Danh s\u00E1ch d\u1ECBch v\u1EE5 c\u00F4ng
 log-status=T\u00ECnh tr\u1EA1ng
 message-info=Th\u00F4ng b\u00E1o
+no-dossier-result-info=Kh\u00F4ng c\u00F3 th\u00F4ng tin k\u1EBFt qu\u1EA3 x\u1EED l\u00FD h\u1ED3 s\u01A1
