#Language-HOOK-commit1211 add key no-history-were-found = Ch\u01B0a c\u00F3 l\u1ECBch s\u1EED x\u1EED l\u00FD

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -682,3 +682,4 @@ log-status=T\u00ECnh tr\u1EA1ng
 message-info=Th\u00F4ng b\u00E1o
 no-dossier-result-info=Kh\u00F4ng c\u00F3 th\u00F4ng tin k\u1EBFt qu\u1EA3 x\u1EED l\u00FD h\u1ED3 s\u01A1
 no-dossier-were-found=Kh\u00F4ng t\u00ECm th\u1EA5y h\u1ED3 s\u01A1 n\u00E0o
+no-history-were-found=Ch\u01B0a c\u00F3 l\u1ECBch s\u1EED x\u1EED l\u00FD
