--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -685,3 +685,4 @@ no-dossier-were-found=Kh\u00F4ng t\u00ECm th\u1EA5y h\u1ED3 s\u01A1 n\u00E0o
 no-history-were-found=Ch\u01B0a c\u00F3 l\u1ECBch s\u1EED x\u1EED l\u00FD
 no-service-were-found=Kh\u00F4ng t\u00ECm th\u1EA5y d\u1ECBch v\u1EE5 c\u00F4ng n\u00E0o
 note=Ghi ch\u00FA
+number-order=STT
