--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -686,3 +686,4 @@ no-history-were-found=Ch\u01B0a c\u00F3 l\u1ECBch s\u1EED x\u1EED l\u00FD
 no-service-were-found=Kh\u00F4ng t\u00ECm th\u1EA5y d\u1ECBch v\u1EE5 c\u00F4ng n\u00E0o
 note=Ghi ch\u00FA
 number-order=STT
+org.opencps.dossiermgt.EmptyDossierWardCodeException=Kh\u00F4ng c\u00F3 m\u00E3 t\u1EC9nh-th\u00E0nh ph\u1ED1
