#Language-HOOK-commit1311 add key original-file = Gi\u1EA5y t\u1EDD g\u1ED1c

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -687,3 +687,4 @@ no-service-were-found=Kh\u00F4ng t\u00ECm th\u1EA5y d\u1ECBch v\u1EE5 c\u00F4ng 
 note=Ghi ch\u00FA
 number-order=STT
 org.opencps.dossiermgt.EmptyDossierWardCodeException=Kh\u00F4ng c\u00F3 m\u00E3 t\u1EC9nh-th\u00E0nh ph\u1ED1
+original-file=Gi\u1EA5y t\u1EDD g\u1ED1c
