--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -692,3 +692,4 @@ original-file=Gi\u1EA5y t\u1EDD g\u1ED1c
 private-dossier=Th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 ri\u00EAng
 receive-datetime=Ng\u00E0y ti\u1EBFp nh\u1EADn
 reception-no=M\u00E3 ti\u1EBFp nh\u1EADn
+reception-time=Ng\u00E0y nh\u1EADn h\u1ED3 s\u01A1
