--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -693,3 +693,4 @@ private-dossier=Th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 ri\u00EAng
 receive-datetime=Ng\u00E0y ti\u1EBFp nh\u1EADn
 reception-no=M\u00E3 ti\u1EBFp nh\u1EADn
 reception-time=Ng\u00E0y nh\u1EADn h\u1ED3 s\u01A1
+remove-group=X\u00F3a nh\u00F3m h\u1ED3 s\u01A1 ri\u00EAng
