--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -696,3 +696,4 @@ reception-time=Ng\u00E0y nh\u1EADn h\u1ED3 s\u01A1
 remove-group=X\u00F3a nh\u00F3m h\u1ED3 s\u01A1 ri\u00EAng
 remove-old-file-before-upload=B\u1EA1n ph\u1EA3i x\u00F3a t\u1EC7p \u0111\u00EDnh k\u00E8m c\u0169 tr\u01B0\u1EDBc khi t\u1EA3i t\u1EC7p m\u1EDBi l\u00EAn
 request-command=Lo\u1EA1i y\u00EAu c\u1EA7u
+required-process=Y\u00EAu c\u1EA7u c\u1EA7n x\u1EED l\u00FD
