#Language-HOOK-commit1531 add key result = K\u1EBFt qu\u1EA3

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -698,3 +698,4 @@ remove-old-file-before-upload=B\u1EA1n ph\u1EA3i x\u00F3a t\u1EC7p \u0111\u00EDn
 request-command=Lo\u1EA1i y\u00EAu c\u1EA7u
 required-process=Y\u00EAu c\u1EA7u c\u1EA7n x\u1EED l\u00FD
 resubmitRequest=Y\u00EAu c\u1EA7u b\u1ED5 sung
+result=K\u1EBFt qu\u1EA3
