--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -699,3 +699,4 @@ request-command=Lo\u1EA1i y\u00EAu c\u1EA7u
 required-process=Y\u00EAu c\u1EA7u c\u1EA7n x\u1EED l\u00FD
 resubmitRequest=Y\u00EAu c\u1EA7u b\u1ED5 sung
 result=K\u1EBFt qu\u1EA3
+row=STT
