--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -700,3 +700,4 @@ required-process=Y\u00EAu c\u1EA7u c\u1EA7n x\u1EED l\u00FD
 resubmitRequest=Y\u00EAu c\u1EA7u b\u1ED5 sung
 result=K\u1EBFt qu\u1EA3
 row=STT
+search-dossier-file-same-template=T\u00ECm gi\u1EA5y t\u1EDD c\u00F3 c\u00F9ng bi\u1EC3u m\u1EABu
