#Language-HOOK-commit1591 add key service-list = Danh s\u00E1ch th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -701,3 +701,4 @@ resubmitRequest=Y\u00EAu c\u1EA7u b\u1ED5 sung
 result=K\u1EBFt qu\u1EA3
 row=STT
 search-dossier-file-same-template=T\u00ECm gi\u1EA5y t\u1EDD c\u00F3 c\u00F9ng bi\u1EC3u m\u1EABu
+service-list=Danh s\u00E1ch th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
