--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -716,3 +716,4 @@ upload-error=X\u1EA3y ra l\u1ED7i trong qu\u00E1 tr\u00ECnh t\u1EA3i t\u1EC7p l\
 upload-file=T\u1EA3i gi\u1EA5y t\u1EDD l\u00EAn
 view-attachment=Xem t\u1EC7p \u0111\u00EDnh k\u00E8m
 view-content=Xem n\u1ED9i dung
+view-dossier=Xem h\u1ED3 s\u01A1
