--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -717,3 +717,4 @@ upload-file=T\u1EA3i gi\u1EA5y t\u1EDD l\u00EAn
 view-attachment=Xem t\u1EC7p \u0111\u00EDnh k\u00E8m
 view-content=Xem n\u1ED9i dung
 view-dossier=Xem h\u1ED3 s\u01A1
+view-form=Xem bi\u1EC3u m\u1EABu
