--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -719,3 +719,4 @@ view-content=Xem n\u1ED9i dung
 view-dossier=Xem h\u1ED3 s\u01A1
 view-form=Xem bi\u1EC3u m\u1EABu
 ## duplicate key - line -720 ward-code=Ph\u01B0\u1EDDng/X\u00E3
+## duplicate key - line -721 ward-id=Ph\u01B0\u1EDDng/x\u00E3
