#Language-HOOK-commit91 add key add-step-inline = Th\u00EAm b\u01B0\u1EDBc x\u1EED l\u00FD

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -730,3 +730,4 @@ your-account-not-authorized-update-dossier=T\u00E0i kho\u1EA3n c\u1EE7a  kh\u00F
 action-name=T\u00EAn thao t\u00E1c
 add-process=Th\u00EAm quy tr\u00ECnh x\u1EED l\u00FD
 add-step=Th\u00EAm b\u01B0\u1EDBc
+add-step-inline=Th\u00EAm b\u01B0\u1EDBc x\u1EED l\u00FD
