#Language-HOOK-commit71 add key add-step = Th\u00EAm b\u01B0\u1EDBc

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -729,3 +729,4 @@ your-account-not-authorized-update-dossier=T\u00E0i kho\u1EA3n c\u1EE7a  kh\u00F
 5-minutely=th\u1EF1c hi\u1EC7n theo l\u1ECBch 5 ph\u00FAt/l\u1EA7n (m\u1ED7i ph\u00FAt ki\u1EC3m tra th\u1EF1c hi\u1EC7n m\u1ED9t l\u1EA7n)
 action-name=T\u00EAn thao t\u00E1c
 add-process=Th\u00EAm quy tr\u00ECnh x\u1EED l\u00FD
+add-step=Th\u00EAm b\u01B0\u1EDBc
