--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -732,3 +732,4 @@ add-process=Th\u00EAm quy tr\u00ECnh x\u1EED l\u00FD
 add-step=Th\u00EAm b\u01B0\u1EDBc
 add-step-inline=Th\u00EAm b\u01B0\u1EDBc x\u1EED l\u00FD
 adding-process-step=Th\u00EAm b\u01B0\u1EDBc x\u1EED l\u00FD
+adding-process-workflow=Th\u00EAm b\u01B0\u1EDBc x\u1EED l\u00FD
