--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -738,3 +738,4 @@ assign-user=Ph\u00E2n c\u00F4ng ng\u01B0\u00F2i x\u1EED l\u00FD
 auto-event=K\u00EDch ho\u1EA1t t\u1EF1 \u0111\u1ED9ng
 canceled=\u0110\u00E3 h\u1EE7y
 change=h\u1ED3 s\u01A1 \u0111\u00E3 \u0111\u01B0\u1EE3c b\u1ED5 sung th\u00EAm d\u1EEF li\u1EC7u m\u1EDBi
+choose-service=ch\u1ECDn d\u1ECBch v\u1EE5 c\u00F4ng
