--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -743,3 +743,4 @@ choose-service=ch\u1ECDn d\u1ECBch v\u1EE5 c\u00F4ng
 create=H\u1ED3 s\u01A1 \u0111\u00E3 \u0111\u01B0\u1EE3c ti\u1EBFp nh\u1EADn tr\u00EAn m\u1ED9t c\u1EEDa \u0111i\u1EC7n t\u1EED
 daily=th\u1EF1c hi\u1EC7n theo l\u1ECBch ng\u00E0y (gi\u1EDD c\u1EE5 th\u1EC3 \u0111\u01B0\u1EE3c c\u1EA5u h\u00ECnh trong h\u1EC7 th\u1ED1ng)
 days-duration=S\u1ED1 ng\u00E0y
+deadline-pattern=L\u1ECBch h\u1EB9n tr\u1EA3
