#Language-HOOK-commit531 add key event-cancel = Nh\u1EADn y\u00EAu c\u1EA7u r\u00FAt h\u1ED3 s\u01A1 t\u1EEB xa

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -752,3 +752,4 @@ dossier-part=C\u1EADp nh\u1EADt k\u1EBFt qu\u1EA3 x\u1EED l\u00FD h\u1ED3 s\u01A
 duration=Th\u1EDDi h\u1EA1n gi\u1EA3i quy\u1EBFt
 end-step=B\u01B0\u1EDBc k\u1EBFt th\u00FAc
 esign=K\u00FD s\u1ED1
+event-cancel=Nh\u1EADn y\u00EAu c\u1EA7u r\u00FAt h\u1ED3 s\u01A1 t\u1EEB xa
