--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -755,3 +755,4 @@ esign=K\u00FD s\u1ED1
 event-cancel=Nh\u1EADn y\u00EAu c\u1EA7u r\u00FAt h\u1ED3 s\u01A1 t\u1EEB xa
 external-app-url=Li\u00EAn k\u1EBFt tra c\u1EE9u d\u1EEF li\u1EC7u
 generate-deadline=Ng\u00E0y h\u1EBFt h\u1EA1n
+generate-reception-no=M\u00E3 ti\u1EBFp nh\u1EADn h\u1ED3 s\u01A1
