--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -758,3 +758,4 @@ generate-deadline=Ng\u00E0y h\u1EBFt h\u1EA1n
 generate-reception-no=M\u00E3 ti\u1EBFp nh\u1EADn h\u1ED3 s\u01A1
 hourly=th\u1EF1c hi\u1EC7n theo l\u1ECBch gi\u1EDD (m\u1ED7i gi\u1EDD ki\u1EC3m tra th\u1EF1c hi\u1EC7n m\u1ED9t l\u1EA7n)
 is-finish-step=L\u00E0 b\u01B0\u1EDBc ho\u00E0n th\u00E0nh
+is-multipled=X\u1EED l\u00FD nhi\u1EC1u h\u1ED3 s\u01A1
