--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -770,3 +770,4 @@ no-process-step-were-found=Ch\u01B0a c\u00F3 b\u01B0\u1EDBc x\u1EED l\u00FD \u01
 onegate=h\u1ED3 s\u01A1 \u0111\u01B0\u1EE3c ti\u1EBFp nh\u1EADn m\u1ED9t c\u1EEDa v\u00E0 chuy\u1EC3n v\u00E0o quy tr\u00ECnh x\u1EED l\u00FD (ch\u1EC9 \u00E1p d\u1EE5ng khi b\u01B0\u1EDBc tr\u01B0\u1EDBc
 pay=Nh\u1EADn phi\u1EBFu thanh to\u00E1n t\u1EEB xa
 paying=Ch\u1EDD thanh to\u00E1n
+payok=Ki\u1EC3m tra h\u1ED3 s\u01A1 \u0111\u01B0\u1EE3c x\u00E1c nh\u1EADn \u0111\u00E3 thanh to\u00E1n h\u1EE3p l\u1EC7
