--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -773,3 +773,4 @@ paying=Ch\u1EDD thanh to\u00E1n
 payok=Ki\u1EC3m tra h\u1ED3 s\u01A1 \u0111\u01B0\u1EE3c x\u00E1c nh\u1EADn \u0111\u00E3 thanh to\u00E1n h\u1EE3p l\u1EC7
 post-process-step-id=B\u01B0\u1EDBc sau th\u1EF1c hi\u1EC7n thao t\u00E1c
 postback=Tr\u1EA3 v\u1EC1
+pre-condition=\u0110i\u1EC1u ki\u1EC7n th\u1EF1c hi\u1EC7n
