#Language-HOOK-commit951 add key pre-process-step-id = B\u01B0\u1EDBc th\u1EF1c hi\u1EC7n thao t\u00E1c

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -774,3 +774,4 @@ payok=Ki\u1EC3m tra h\u1ED3 s\u01A1 \u0111\u01B0\u1EE3c x\u00E1c nh\u1EADn \u011
 post-process-step-id=B\u01B0\u1EDBc sau th\u1EF1c hi\u1EC7n thao t\u00E1c
 postback=Tr\u1EA3 v\u1EC1
 pre-condition=\u0110i\u1EC1u ki\u1EC7n th\u1EF1c hi\u1EC7n
+pre-process-step-id=B\u01B0\u1EDBc th\u1EF1c hi\u1EC7n thao t\u00E1c
