--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -777,3 +777,4 @@ pre-condition=\u0110i\u1EC1u ki\u1EC7n th\u1EF1c hi\u1EC7n
 pre-process-step-id=B\u01B0\u1EDBc th\u1EF1c hi\u1EC7n thao t\u00E1c
 process-action=Thao t\u00E1c
 process-description=M\u00F4 t\u1EA3
+process-info=Th\u00F4ng tin quy tr\u00ECnh
