--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -780,3 +780,4 @@ process-description=M\u00F4 t\u1EA3
 process-info=Th\u00F4ng tin quy tr\u00ECnh
 process-name=T\u00EAn quy tr\u00ECnh
 process-next-step=B\u01B0\u1EDBc sau
+process-no=M\u00E3 quy tr\u00ECnh
