--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -781,3 +781,4 @@ process-info=Th\u00F4ng tin quy tr\u00ECnh
 process-name=T\u00EAn quy tr\u00ECnh
 process-next-step=B\u01B0\u1EDBc sau
 process-no=M\u00E3 quy tr\u00ECnh
+process-step=T\u00EAn b\u01B0\u1EDBc
