#Language-HOOK-commit1131 add key read-only = Ch\u1EC9 xem

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -783,3 +783,4 @@ process-next-step=B\u01B0\u1EDBc sau
 process-no=M\u00E3 quy tr\u00ECnh
 process-step=T\u00EAn b\u01B0\u1EDBc
 processing=\u0110ang x\u1EED l\u00FD
+read-only=Ch\u1EC9 xem
