#Language-HOOK-commit1111 add key processing = \u0110ang x\u1EED l\u00FD

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -782,3 +782,4 @@ process-name=T\u00EAn quy tr\u00ECnh
 process-next-step=B\u01B0\u1EDBc sau
 process-no=M\u00E3 quy tr\u00ECnh
 process-step=T\u00EAn b\u01B0\u1EDBc
+processing=\u0110ang x\u1EED l\u00FD
