--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -785,3 +785,4 @@ process-step=T\u00EAn b\u01B0\u1EDBc
 processing=\u0110ang x\u1EED l\u00FD
 read-only=Ch\u1EC9 xem
 received=\u0110\u00E3 ti\u1EBFp nh\u1EADn
+receiving=Ti\u1EBFp nh\u1EADn h\u1ED3 s\u01A1
