#Language-HOOK-commit1151 add key received = \u0110\u00E3 ti\u1EBFp nh\u1EADn

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -784,3 +784,4 @@ process-no=M\u00E3 quy tr\u00ECnh
 process-step=T\u00EAn b\u01B0\u1EDBc
 processing=\u0110ang x\u1EED l\u00FD
 read-only=Ch\u1EC9 xem
+received=\u0110\u00E3 ti\u1EBFp nh\u1EADn
