--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -786,3 +786,4 @@ processing=\u0110ang x\u1EED l\u00FD
 read-only=Ch\u1EC9 xem
 received=\u0110\u00E3 ti\u1EBFp nh\u1EADn
 receiving=Ti\u1EBFp nh\u1EADn h\u1ED3 s\u01A1
+reference-dossier-part-id=X\u1EED l\u00FD th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 ri\u00EAng
