#Language-HOOK-commit1231 add key request-payment = Y\u00EAu c\u1EA7u thanh to\u00E1n ph\u00ED

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -788,3 +788,4 @@ received=\u0110\u00E3 ti\u1EBFp nh\u1EADn
 receiving=Ti\u1EBFp nh\u1EADn h\u1ED3 s\u01A1
 reference-dossier-part-id=X\u1EED l\u00FD th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 ri\u00EAng
 repair=y\u00EAu c\u1EA7u ch\u1EC9nh s\u1EEDa k\u1EBFt qu\u1EA3 h\u1ED3 s\u01A1 (ch\u1EC9 \u00E1p d\u1EE5ng v\u1EDBi b\u01B0\u1EDBc tr\u01B0\u1EDBc
+request-payment=Y\u00EAu c\u1EA7u thanh to\u00E1n ph\u00ED
