#Language-HOOK-commit1271 add key result-action = K\u1EBFt qu\u1EA3 x\u1EED l\u00FD

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -790,3 +790,4 @@ reference-dossier-part-id=X\u1EED l\u00FD th\u00E0nh ph\u1EA7n h\u1ED3 s\u01A1 r
 repair=y\u00EAu c\u1EA7u ch\u1EC9nh s\u1EEDa k\u1EBFt qu\u1EA3 h\u1ED3 s\u01A1 (ch\u1EC9 \u00E1p d\u1EE5ng v\u1EDBi b\u01B0\u1EDBc tr\u01B0\u1EDBc
 request-payment=Y\u00EAu c\u1EA7u thanh to\u00E1n ph\u00ED
 resubmit=H\u1ED3 s\u01A1 \u0111\u00E3 \u0111\u01B0\u1EE3c b\u1ED5 sung th\u00EAm k\u1EBFt qu\u1EA3
+result-action=K\u1EBFt qu\u1EA3 x\u1EED l\u00FD
