--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -791,3 +791,4 @@ repair=y\u00EAu c\u1EA7u ch\u1EC9nh s\u1EEDa k\u1EBFt qu\u1EA3 h\u1ED3 s\u01A1 (
 request-payment=Y\u00EAu c\u1EA7u thanh to\u00E1n ph\u00ED
 resubmit=H\u1ED3 s\u01A1 \u0111\u00E3 \u0111\u01B0\u1EE3c b\u1ED5 sung th\u00EAm k\u1EBFt qu\u1EA3
 result-action=K\u1EBFt qu\u1EA3 x\u1EED l\u00FD
+role-id=Vai tr\u00F2 x\u1EED l\u00FD
