#Language-HOOK-commit1511 add key step-exist = Quy tr\u00ECnh \u0111ang t\u1ED3n t\u1EA1i b\u01B0\u1EDBc x\u1EED l\u00FD

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -802,3 +802,4 @@ service-config-exist=Quy tr\u00ECnh \u0111ang \u0111\u01B0\u1EE3c g\u1EAFn v\u1E
 serviceinfolist=Danh s\u00E1ch d\u1ECBch v\u1EE5 c\u00F4ng
 start-step=B\u01B0\u1EDBc b\u1EAFt \u0111\u1EA7u
 step=B\u01B0\u1EDBc x\u1EED l\u00FD
+step-exist=Quy tr\u00ECnh \u0111ang t\u1ED3n t\u1EA1i b\u01B0\u1EDBc x\u1EED l\u00FD
