#Language-HOOK-commit1531 add key step-name = T\u00EAn b\u01B0\u1EDBc

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -803,3 +803,4 @@ serviceinfolist=Danh s\u00E1ch d\u1ECBch v\u1EE5 c\u00F4ng
 start-step=B\u01B0\u1EDBc b\u1EAFt \u0111\u1EA7u
 step=B\u01B0\u1EDBc x\u1EED l\u00FD
 step-exist=Quy tr\u00ECnh \u0111ang t\u1ED3n t\u1EA1i b\u01B0\u1EDBc x\u1EED l\u00FD
+step-name=T\u00EAn b\u01B0\u1EDBc
