#Language-HOOK-commit1571 add key tag-label = ki\u1EC3m tra h\u1ED3 s\u01A1 \u0111\u01B0\u1EE3c \u0111\u00E1nh tag v\u1EDBi gi\u00E1 tr\u1ECB label

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -805,3 +805,4 @@ step=B\u01B0\u1EDBc x\u1EED l\u00FD
 step-exist=Quy tr\u00ECnh \u0111ang t\u1ED3n t\u1EA1i b\u01B0\u1EDBc x\u1EED l\u00FD
 step-name=T\u00EAn b\u01B0\u1EDBc
 submit=h\u1ED3 s\u01A1 \u0111\u01B0\u1EE3c g\u1EEDi t\u1EEB c\u1ED5ng tr\u1EF1c tuy\u1EBFn (ch\u1EC9 \u00E1p d\u1EE5ng khi b\u01B0\u1EDBc tr\u01B0\u1EDBc
+tag-label=ki\u1EC3m tra h\u1ED3 s\u01A1 \u0111\u01B0\u1EE3c \u0111\u00E1nh tag v\u1EDBi gi\u00E1 tr\u1ECB label
