#Language-HOOK-commit1631 add key weekly = th\u1EF1c hi\u1EC7n theo l\u1ECBch tu\u1EA7n (gi\u1EDD c\u1EE5 th\u1EC3 \u0111\u01B0\u1EE3c c\u1EA5u h\u00ECnh trong h\u1EC7 th\u1ED1ng)

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -808,3 +808,4 @@ submit=h\u1ED3 s\u01A1 \u0111\u01B0\u1EE3c g\u1EEDi t\u1EEB c\u1ED5ng tr\u1EF1c 
 tag-label=ki\u1EC3m tra h\u1ED3 s\u01A1 \u0111\u01B0\u1EE3c \u0111\u00E1nh tag v\u1EDBi gi\u00E1 tr\u1ECB label
 update-process=C\u1EADp nh\u1EADt quy tr\u00ECnh
 waiting=Ch\u1EDD x\u1EED l\u00FD
+weekly=th\u1EF1c hi\u1EC7n theo l\u1ECBch tu\u1EA7n (gi\u1EDD c\u1EE5 th\u1EC3 \u0111\u01B0\u1EE3c c\u1EA5u h\u00ECnh trong h\u1EC7 th\u1ED1ng)
