--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -820,3 +820,4 @@ action-date=Ng\u00E0y th\u1EF1c hi\u1EC7n
 action-note=Ghi ch\u00FA c\u1EE7a ng\u01B0\u1EDDi x\u1EED l\u00FD
 action-user=Ng\u01B0\u1EDDi x\u1EED l\u00FD
 apcept-next-process-workflow=\u0110\u1ED3ng \u00FD th\u1EF1c hi\u1EC7n thao t\u00E1c
+apcept-signature=\u0110\u1ED3ng \u00FD th\u1EF1c hi\u1EC7n k\u00FD \u0111i\u1EC7n t\u1EED v\u0103n b\u1EA3n v\u1EDBi m\u00E3 kh\u00F3a \u0111\u01B0\u1EE3c c\u1EA5p
