--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -827,3 +827,4 @@ assign-to-user=Ng\u01B0\u1EDDi ph\u1EE5 tr\u00E1ch
 ## duplicate key - line -826 city-id=T\u1EC9nh/th\u00E0nh ph\u1ED1
 complate-date=Ng\u00E0y ho\u00E0n th\u00E0nh
 ## duplicate key - line -828 contact-name=T\u00EAn ng\u01B0\u1EDDi li\u00EAn h\u1EC7
+## duplicate key - line -829 contact-tel-no=S\u1ED1 \u0111i\u1EC7n tho\u1EA1i li\u00EAn h\u1EC7
