--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -831,3 +831,4 @@ complate-date=Ng\u00E0y ho\u00E0n th\u00E0nh
 ## duplicate key - line -830 create-file=T\u1EA1o bi\u1EC3u m\u1EABu
 days-delay=H\u1EA1n x\u1EED l\u00FD
 dealine=H\u1EA1n x\u1EED l\u00FD
+## duplicate key - line -833 display-name=T\u00EAn gi\u1EA5y t\u1EDD
