--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -836,3 +836,4 @@ displayName=T\u00EAn gi\u1EA5y t\u1EDD
 ## duplicate key - line -835 district-id=Qu\u1EADn/huy\u1EC7n
 ## duplicate key - line -836 dossier-file-date=Ng\u00E0y v\u0103n b\u1EA3n
 ## duplicate key - line -837 dossier-file-no=S\u1ED1 hi\u1EC7u gi\u1EA5y t\u1EDD
+## duplicate key - line -838 dossier-file-upload=Ch\u1ECDn t\u1EC7p
