#Language-HOOK-commit651 add key handle = X\u1EED l\u00FD

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -847,3 +847,4 @@ estimate-date=Ng\u00E0y h\u1EB9n tr\u1EA3
 filter-process-step=--L\u1ECDc theo b\u01B0\u1EDBc x\u1EED l\u00FD--
 filter-service-info=--L\u1ECDc theo th\u1EE7 t\u1EE5c--
 finished-processing=H\u1ED3 s\u01A1 m\u1EDBi \u0111\u01B0\u1EE3c x\u1EED l\u00FD
+handle=X\u1EED l\u00FD
