--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -856,3 +856,4 @@ manipulation=Thao t\u00E1c
 multiple-process-order-handle-is-developing=Ch\u1EE9c n\u0103ng x\u1EED l\u00FD nhi\u1EC1u phi\u1EBFu ti\u1EBFp nh\u1EADn \u0111ang \u0111\u01B0\u1EE3c ph\u00E1t tri\u1EC3n
 no-action-history-were-found=Kh\u00F4ng c\u00F3 l\u1ECBch s\u1EED t\u00ECm ki\u1EBFm \u0111\u01B0\u1EE3c t\u00ECm th\u1EA5y
 no-process-order-were-found=Kh\u00F4ng t\u00ECm th\u1EA5y phi\u1EBFu x\u1EED l\u00FD n\u00E0o
+not-attachment-file=Kh\u00F4ng c\u00F3 t\u1EC7p tin \u0111\u00EDnh k\u00E8m
