#Language-HOOK-commit11 add key top_tabs_dossierfilelist=Giấy tờ

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -890,3 +890,4 @@ you-need-select-any-process-order-to-process=B\u1EA1n ph\u1EA3i ch\u1ECDn m\u1ED
 
 
 top_tabs_dossierlist=Hồ sơ
+top_tabs_dossierfilelist=Giấy tờ
