#Language-HOOK-commit61 add key reception-no=Mã tiếp nhận

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -895,3 +895,4 @@ top_tabs_dossierfilelist=Giấy tờ
 filter-by-dossier-status=-Lọc theo trạng thái hồ sơ-
 ## duplicate key - line -895 no=STT
 ## duplicate key - line -896 receive-datetime=Ngày tiếp nhận
+## duplicate key - line -897 reception-no=Mã tiếp nhận
