#Language-HOOK-commit171 add key address=Địa chỉ

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -906,3 +906,4 @@ dossier-not-found=Hồ sơ số
 dossieroverview=Thông tin hồ sơ
 dossierfile=Nội dung hồ sơ
 dossierhistory=Lịch sử xử lý
+address=Địa chỉ
