#Language-HOOK-commit381 add key dossierfile-filetype=Loại giấy

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -927,3 +927,4 @@ dossierfile-fileno=Số văn bản
 dossierfile-filedate=Ngày văn bản
 dossierfile-displayname=Tên văn bản
 dossierfile-receptionno=Hồ sơ số
+dossierfile-filetype=Loại giấy
