#Language-HOOK-commit361 add key dossierfile-displayname=Tên văn bản

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -925,3 +925,4 @@ only-view-file-result=Chỉ xem giấy tờ kết quả
 no-dossierfile-were-found=Không có giầy tờ nào được tìm thấy
 dossierfile-fileno=Số văn bản
 dossierfile-filedate=Ngày văn bản
+dossierfile-displayname=Tên văn bản
