#Language-HOOK-commit341 add key dossierfile-fileno=Số văn bản

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -923,3 +923,4 @@ action-datetime=Ngày
 filter-by-dossier-template=-Lọc theo biểu mẫu giấy tờ-
 only-view-file-result=Chỉ xem giấy tờ kết quả
 no-dossierfile-were-found=Không có giầy tờ nào được tìm thấy
+dossierfile-fileno=Số văn bản
