#Language-HOOK-commit391 add key dossier-filetype-input=Giấy tờ nộp

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -928,3 +928,4 @@ dossierfile-filedate=Ngày văn bản
 dossierfile-displayname=Tên văn bản
 dossierfile-receptionno=Hồ sơ số
 dossierfile-filetype=Loại giấy
+dossier-filetype-input=Giấy tờ nộp
