#Language-HOOK-commit421 add key dossier-status-receiving=Chờ tiếp nhận

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -931,3 +931,4 @@ dossierfile-filetype=Loại giấy
 dossier-filetype-input=Giấy tờ nộp
 dossier-filetype-output=Giấy kết quả
 dossier-status-new=Tạo mới
+dossier-status-receiving=Chờ tiếp nhận
