#Language-HOOK-commit411 add key dossier-status-new=Tạo mới

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -930,3 +930,4 @@ dossierfile-receptionno=Hồ sơ số
 dossierfile-filetype=Loại giấy
 dossier-filetype-input=Giấy tờ nộp
 dossier-filetype-output=Giấy kết quả
+dossier-status-new=Tạo mới
