#Language-HOOK-commit401 add key dossier-filetype-output=Giấy kết quả

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -929,3 +929,4 @@ dossierfile-displayname=Tên văn bản
 dossierfile-receptionno=Hồ sơ số
 dossierfile-filetype=Loại giấy
 dossier-filetype-input=Giấy tờ nộp
+dossier-filetype-output=Giấy kết quả
