#Language-HOOK-commit441 add key dossier-status-paying=Chờ thanh toán

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -933,3 +933,4 @@ dossier-filetype-output=Giấy kết quả
 dossier-status-new=Tạo mới
 dossier-status-receiving=Chờ tiếp nhận
 dossier-status-waiting=Chờ bổ sung giấy tờ
+dossier-status-paying=Chờ thanh toán
