#Language-HOOK-commit431 add key dossier-status-waiting=Chờ bổ sung giấy tờ

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -932,3 +932,4 @@ dossier-filetype-input=Giấy tờ nộp
 dossier-filetype-output=Giấy kết quả
 dossier-status-new=Tạo mới
 dossier-status-receiving=Chờ tiếp nhận
+dossier-status-waiting=Chờ bổ sung giấy tờ
