#Language-HOOK-commit461 add key dossier-status-done=Hoàn thành xử lý

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -935,3 +935,4 @@ dossier-status-receiving=Chờ tiếp nhận
 dossier-status-waiting=Chờ bổ sung giấy tờ
 dossier-status-paying=Chờ thanh toán
 dossier-status-processing=Đang xử lý
+dossier-status-done=Hoàn thành xử lý
