#Language-HOOK-commit511 add key status-soon=Sớm hạn

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -940,3 +940,4 @@ dossier-status-system=Hệ thống đang xử lý
 dossier-status-error=Lỗi xử lý
 process-status=Tình trạng
 status-late=Trễ hạn
+status-soon=Sớm hạn
