#Language-HOOK-commit01 add key #Generated by ResourceBundle Editor (http://essiembre.github.io/eclipse-rbe/)

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -946,3 +946,8 @@ status-toosoon=Chưa đến hạn
 status-toolate=Đã quá hạn
 estimatedate-status=Hạn xử lý
 exporting-file=Đang xuất báo cáo
+##
+## Language 19
+##
+
+
