#Language-HOOK-commit351 add key dossier-monitoring-service = Th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -967,3 +967,4 @@ dossier-file-search-keywords=-Nh\u1EADp t\u1EEB kh\u00F3a t\u00ECm ki\u1EBFm gi\
 dossier-list=Tra c\u1EE9u h\u1ED3 s\u01A1
 dossier-monitoring-dossier-file-list=Gi\u1EA5y t\u1EDD
 dossier-monitoring-search=H\u1ED3 s\u01A1
+dossier-monitoring-service=Th\u1EE7 t\u1EE5c h\u00E0nh ch\u00EDnh
