#Language-HOOK-commit41 add key ACB = Ng\u00E2n h\u00E0ng TMCP \u00C1 Ch\u00E2u

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1017,3 +1017,4 @@ update-datetime=Th\u1EDDi gian
 
 
 ABBank=Ng\u00E2n h\u00E0ng TMCP An B\u00ECnh
+ACB=Ng\u00E2n h\u00E0ng TMCP \u00C1 Ch\u00E2u
