#Language-HOOK-commit61 add key Agribank = Ng\u00E2n h\u00E0ng NN & PTNT Vi\u1EC7t Nam

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1018,3 +1018,4 @@ update-datetime=Th\u1EDDi gian
 
 ABBank=Ng\u00E2n h\u00E0ng TMCP An B\u00ECnh
 ACB=Ng\u00E2n h\u00E0ng TMCP \u00C1 Ch\u00E2u
+Agribank=Ng\u00E2n h\u00E0ng NN & PTNT Vi\u1EC7t Nam
