#Language-HOOK-commit131 add key DAB = Ng\u00E2n h\u00E0ng TMCP \u0110\u00F4ng \u00C1

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1021,3 +1021,4 @@ ACB=Ng\u00E2n h\u00E0ng TMCP \u00C1 Ch\u00E2u
 Agribank=Ng\u00E2n h\u00E0ng NN & PTNT Vi\u1EC7t Nam
 BIDV=Ng\u00E2n h\u00E0ng \u0110\u1EA7u t\u01B0 v\u00E0 ph\u00E1i tri\u1EC3na
 BVB=Ng\u00E2n h\u00E0ng TMCP B\u1EA3o Vi\u1EC7t
+DAB=Ng\u00E2n h\u00E0ng TMCP \u0110\u00F4ng \u00C1
