#Language-HOOK-commit271 add key MSB = Ng\u00E2n h\u00E0ng TMCP H\u00E0ng h\u1EA3i

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1028,3 +1028,4 @@ GPBank=Ng\u00E2n h\u00E0ng TMCP D\u1EA7u kh\u00ED to\u00E0n c\u1EA7u
 HDB=Ng\u00E2n h\u00E0ng TMCP Ph\u00E1t tri\u1EC3n nh\u00E0 TPHCM
 IVB=Ng\u00E2n h\u00E0ng TNHH Indovina
 MB=Ng\u00E2n h\u00E0ng TMCP Qu\u00E2n \u0111\u1ED9i
+MSB=Ng\u00E2n h\u00E0ng TMCP H\u00E0ng h\u1EA3i
