#Language-HOOK-commit311 add key NASB = Ng\u00E2n h\u00E0ng TMCP B\u1EAFc \u00C1

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1030,3 +1030,4 @@ IVB=Ng\u00E2n h\u00E0ng TNHH Indovina
 MB=Ng\u00E2n h\u00E0ng TMCP Qu\u00E2n \u0111\u1ED9i
 MSB=Ng\u00E2n h\u00E0ng TMCP H\u00E0ng h\u1EA3i
 Master-Card=Master Card
+NASB=Ng\u00E2n h\u00E0ng TMCP B\u1EAFc \u00C1
