#Language-HOOK-commit351 add key NamA-Bank = Ng\u00E2n h\u00E0ng TMCP Nam \u00C1

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1032,3 +1032,4 @@ MSB=Ng\u00E2n h\u00E0ng TMCP H\u00E0ng h\u1EA3i
 Master-Card=Master Card
 NASB=Ng\u00E2n h\u00E0ng TMCP B\u1EAFc \u00C1
 NVB=Ng\u00E2n h\u00E0ng TMCP Qu\u1ED1c d\u00E2n ( Nam Vi\u1EC7t )
+NamA-Bank=Ng\u00E2n h\u00E0ng TMCP Nam \u00C1
