#Language-HOOK-commit371 add key OCB = Ng\u00E2n h\u00E0ng TMCP Ph\u01B0\u01A1ng \u0110\u00F4ng

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1033,3 +1033,4 @@ Master-Card=Master Card
 NASB=Ng\u00E2n h\u00E0ng TMCP B\u1EAFc \u00C1
 NVB=Ng\u00E2n h\u00E0ng TMCP Qu\u1ED1c d\u00E2n ( Nam Vi\u1EC7t )
 NamA-Bank=Ng\u00E2n h\u00E0ng TMCP Nam \u00C1
+OCB=Ng\u00E2n h\u00E0ng TMCP Ph\u01B0\u01A1ng \u0110\u00F4ng
