#Language-HOOK-commit491 add key SacomBank = Ng\u00E2n h\u00E0ng TMCP S\u00E0i G\u00F2n Th\u01B0\u1EDDng \

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1039,3 +1039,4 @@ PGBank=Ng\u00E2n h\u00E0ng TMCP X\u0103ng d\u1EA7u Petrolimex
 PNB=Ng\u00E2n h\u00E0ng TMCP Ph\u01B0\u01A1ng Nam
 SHB=Ng\u00E2n h\u00E0ng TMCP S\u00E0i G\u00F2n H\u00E0 N\u1ED9i
 SVB=Ng\u00E2n h\u00E0ng Li\u00EAn doanh Shinhanvina
+SacomBank=Ng\u00E2n h\u00E0ng TMCP S\u00E0i G\u00F2n Th\u01B0\u1EDDng \
