#Language-HOOK-commit551 add key SeAb = Ng\u00E2n h\u00E0ng TMCP \u0110\u00F4ng Nam \u00C1

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1041,3 +1041,4 @@ SHB=Ng\u00E2n h\u00E0ng TMCP S\u00E0i G\u00F2n H\u00E0 N\u1ED9i
 SVB=Ng\u00E2n h\u00E0ng Li\u00EAn doanh Shinhanvina
 SacomBank=Ng\u00E2n h\u00E0ng TMCP S\u00E0i G\u00F2n Th\u01B0\u1EDDng \
 SaigonBank=Ng\u00E2n h\u00E0ng TMCP S\u00E0i G\u00F2n c\u00F4ng \
+SeAb=Ng\u00E2n h\u00E0ng TMCP \u0110\u00F4ng Nam \u00C1
