#Language-HOOK-commit651 add key VID = Ng\u00E2n h\u00E0ng Li\u00EAn doanh VID Public

--- a/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
+++ b/hooks/opencps-hook/docroot/WEB-INF/src/content/Language_vi.properties
@@ -1046,3 +1046,4 @@ TCB=Ng\u00E2n  h\u00E0ng TMCP K\u1EF9 th\u01B0\u01A1ng Vi\u1EC7t Nam
 TPB=Ti\u1EC1n Phong Bank
 VAB=Ng\u00E2n h\u00E0ng TMCP Vi\u1EC7t \u00C1
 VIB=Ng\u00E2n h\u00E0ng TMCP Qu\u1ED1c t\u1EBF
+VID=Ng\u00E2n h\u00E0ng Li\u00EAn doanh VID Public
